--- a/Output/atk_f103.build_log.htm
+++ b/Output/atk_f103.build_log.htm
@@ -62,15 +62,11 @@ compiling main.c...
   void stop();
 ..\..\User\main.c(23): warning:  #1295-D: Deprecated declaration search_notes - give arg types
   void search_notes();						//匹配结果中的音符
-..\..\User\main.c(140): warning:  #1-D: last line of file ends without a newline
+..\..\User\main.c(143): warning:  #1-D: last line of file ends without a newline
   }
-..\..\User\main.c: 17 warnings, 0 errors
-linking...
-..\..\Output\atk_f103.axf: Warning: L6096W: String merge section lcd.o(.conststring) is not null-terminated.
-Program Size: Code=48062 RO-data=55798 RW-data=256 ZI-data=17184  
-Finished: 0 information, 1 warning and 0 error messages.
-FromELF: creating hex file...
-"..\..\Output\atk_f103.axf" - 0 Error(s), 18 Warning(s).
+..\..\User\main.c(143): error: At end of source:  #67: expected a "}"
+..\..\User\main.c: 17 warnings, 1 error
+"..\..\Output\atk_f103.axf" - 1 Error(s), 17 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -83,6 +79,7 @@ Package Vendor: Keil
   D:\MDK\Packs\Keil\STM32F1xx_DFP\2.4.1\Device\Include
 
 <h2>Collection of Component Files used:</h2>
+Target not created.
 Build Time Elapsed:  00:00:01
 </pre>
 </body>
